# hd_embedded_rust

./: .gitignore  Cargo.toml  README.md  memory.x  openocd.cfg  openocd.flash
atsame70q21/: Cargo.toml
atsame70q21/src/: acc.rs  aes.rs  afec0.rs  chipid.rs  dacc.rs  efc.rs  gmac.rs  gpbr.rs  hsmci.rs  icm.rs  isi.rs  lib.rs  lockbit.rs  matrix.rs  mcan0.rs  pioa.rs  pmc.rs  pwm0.rs  qspi.rs  rstc.rs  rswdt.rs  rtc.rs  rtt.rs  scn_scb.rs  sdramc.rs  smc.rs  spi0.rs  ssc.rs  supc.rs  sys_tick.rs  tc0.rs  trng.rs  twihs0.rs  uart0.rs  usart0.rs  usbhs.rs  utmi.rs  wdt.rs  xdmac.rs
atsame70q21/src/acc/: acc_acr.rs  acc_cr.rs  acc_idr.rs  acc_ier.rs  acc_imr.rs  acc_isr.rs  acc_mr.rs  acc_wpmr.rs  acc_wpsr.rs
atsame70q21/src/aes/: aes_aadlenr.rs  aes_clenr.rs  aes_cr.rs  aes_ctrr.rs  aes_gcmhr.rs  aes_ghashr.rs  aes_idatar.rs  aes_idr.rs  aes_ier.rs  aes_imr.rs  aes_isr.rs  aes_ivr.rs  aes_keywr.rs  aes_mr.rs  aes_odatar.rs  aes_tagr.rs
atsame70q21/src/afec0/: afec_acr.rs  afec_cdr.rs  afec_cecr.rs  afec_cgr.rs  afec_chdr.rs  afec_cher.rs  afec_chsr.rs  afec_cocr.rs  afec_cosr.rs  afec_cr.rs  afec_cselr.rs  afec_cvr.rs  afec_cwr.rs  afec_diffr.rs  afec_emr.rs  afec_idr.rs  afec_ier.rs  afec_imr.rs  afec_isr.rs  afec_lcdr.rs  afec_mr.rs  afec_over.rs  afec_seq1r.rs  afec_seq2r.rs  afec_shmr.rs  afec_tempcwr.rs  afec_tempmr.rs  afec_wpmr.rs  afec_wpsr.rs
atsame70q21/src/chipid/: chipid_cidr.rs  chipid_exid.rs
atsame70q21/src/dacc/: dacc_acr.rs  dacc_cdr.rs  dacc_chdr.rs  dacc_cher.rs  dacc_chsr.rs  dacc_cr.rs  dacc_idr.rs  dacc_ier.rs  dacc_imr.rs  dacc_isr.rs  dacc_mr.rs  dacc_trigr.rs  dacc_wpmr.rs  dacc_wpsr.rs
atsame70q21/src/efc/: eefc_fcr.rs  eefc_fmr.rs  eefc_frr.rs  eefc_fsr.rs  eefc_wpmr.rs
atsame70q21/src/gmac/: gmac_ae.rs  gmac_bcfr.rs  gmac_bcft.rs  gmac_bfr64.rs  gmac_bft64.rs  gmac_cbscr.rs  gmac_cbsisqa.rs  gmac_cbsisqb.rs  gmac_cse.rs  gmac_dcfgr.rs  gmac_dtf.rs  gmac_ec.rs  gmac_efrn.rs  gmac_efrsh.rs  gmac_efrsl.rs  gmac_eftn.rs  gmac_eftsh.rs  gmac_eftsl.rs  gmac_fcse.rs  gmac_fr.rs  gmac_ft.rs  gmac_gtbft1518.rs  gmac_hrb.rs  gmac_hrt.rs  gmac_idr.rs  gmac_idrpq.rs  gmac_ier.rs  gmac_ierpq.rs  gmac_ihce.rs  gmac_imr.rs  gmac_imrpq.rs  gmac_ipgs.rs  gmac_isr.rs  gmac_isrpq.rs  gmac_jr.rs  gmac_lc.rs  gmac_lffe.rs  gmac_man.rs  gmac_mcf.rs  gmac_mfr.rs  (+119 more)
atsame70q21/src/gpbr/: sys_gpbr.rs
atsame70q21/src/hsmci/: hsmci_argr.rs  hsmci_blkr.rs  hsmci_cfg.rs  hsmci_cmdr.rs  hsmci_cr.rs  hsmci_cstor.rs  hsmci_dma.rs  hsmci_dtor.rs  hsmci_fifo.rs  hsmci_idr.rs  hsmci_ier.rs  hsmci_imr.rs  hsmci_mr.rs  hsmci_rdr.rs  hsmci_rspr.rs  hsmci_sdcr.rs  hsmci_sr.rs  hsmci_tdr.rs  hsmci_wpmr.rs  hsmci_wpsr.rs
atsame70q21/src/icm/: icm_cfg.rs  icm_ctrl.rs  icm_dscr.rs  icm_hash.rs  icm_idr.rs  icm_ier.rs  icm_imr.rs  icm_isr.rs  icm_sr.rs  icm_uasr.rs  icm_uihval.rs
atsame70q21/src/isi/: isi_cfg1.rs  isi_cfg2.rs  isi_cr.rs  isi_dma_c_addr.rs  isi_dma_c_ctrl.rs  isi_dma_c_dscr.rs  isi_dma_chdr.rs  isi_dma_cher.rs  isi_dma_chsr.rs  isi_dma_p_addr.rs  isi_dma_p_ctrl.rs  isi_dma_p_dscr.rs  isi_idr.rs  isi_ier.rs  isi_imr.rs  isi_pdecf.rs  isi_psize.rs  isi_r2y_set0.rs  isi_r2y_set1.rs  isi_r2y_set2.rs  isi_sr.rs  isi_wpmr.rs  isi_wpsr.rs  isi_y2r_set0.rs  isi_y2r_set1.rs
atsame70q21/src/lockbit/: lockbit_word0.rs  lockbit_word1.rs  lockbit_word2.rs  lockbit_word3.rs
atsame70q21/src/matrix/: ccfg_can0.rs  ccfg_smcnfcs.rs  ccfg_sysio.rs  matrix_mcfg.rs  matrix_mrcr.rs  matrix_pr.rs  matrix_scfg.rs  (+2 more)
hal/: Cargo.toml
hal/src/: clock_gen.rs  delay.rs  gpio.rs  lib.rs  serial.rs
(+486 files in other folders)
