[package]
authors = ["Felix Richter <judge@felixrichter.tech>"]
edition = "2018"
readme = "README.md"
name = "cortex-test"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
atsams70q21 = { path = "../atsams70-rust/pac/atsams70q21/", version = "0.0.1" }

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# this lets you use `cargo fix`!
[[bin]]
name = "cortex-test"
test = false
bench = false

[profile.dev]
debug = true # symbols are nice and they don't increase the size on Flash

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
opt-level = 2
lto = true # better optimizations
