[package]
authors = ["Felix Richter <judge@felixrichter.tech>"]
edition = "2018"
readme = "README.md"
name = "cortex-test"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.6.1", features = ["inline-asm"] }
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.5"
atsame70q21 = { path = "./atsame70q21/", version = "0.0.1" }
panic-halt = "0.2.0"
panic-semihosting = "0.5.3"

# this lets you use `cargo fix`!
[[bin]]
name = "cortex-test"
test = false
bench = false

[profile.dev]
debug = true # symbols are nice and they don't increase the size on Flash
opt-level = "z"
lto = true # better optimizations

[profile.release]
debug = true # symbols are nice and they don't increase the size on Flash
opt-level = "z"
lto = true # better optimizations
