[package]
name = "embedded-systems-board-uni-hd"
authors = ["Felix Richter <judge@felixrichter.tech>"]
edition = "2018"
readme = "README.md"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.6.1" , features=["inline-asm"]}
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.5"
atsame70q21 = { git = "https://github.com/ju6ge/atsame70q21", version = "0.0.1" }
atsamx7x-hal = { git = "https://github.com/ju6ge/atsamx7x-hal/", version = "0.0.1" }
#atsamx7x-hal = { path = "../atsamx7x-hal/", version = "0.0.1" }
embedded-hal = { version = "0.2.3", features = ["unproven"] }
panic-halt = "0.2.0"
linked_list_allocator = "0.8.4"


[profile.dev]
debug = true # symbols are nice and they don't increase the size on Flash
opt-level = "z"

[profile.release]
debug = true # symbols are nice and they don't increase the size on Flash
opt-level = "z"
lto = true # better optimizations
