[package]
name = "hal"
version = "0.0.1"
authors = ["Michal Fita <michal.fita@gmail.com>", "Felix Richter <judge@felixrichter.tech>"]
description = "HAL and Peripheral access API for ATSAMS20 microcontrollers"
categories = [
    "embedded",
    "hardware-support",
    "no-std"
]
keywords = [
    "no-std",
    "arm",
    "cortex-m",
    "embedded-hal",
    "hal"
]
license = "MIT OR Apache-2.0"
#repository = "https://github.com/michalfita/atsams-rust"
readme = "README.md"
edition = "2018"

[dependencies]
cortex-m = "0.6.0"
embedded-hal = "0.2.3"
nb = "0.1.2"
atsame70q21  = { version = "0.0.1", path = "../atsame70q21/" }

